--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
@@ -24,6 +25,7 @@
     "apollo-angular": "^5.0.1",
     "graphql": "^16",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
